# pwncollege_cli

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  conftest.yml  mdformat.yml
src/pwncollege_cli/: __init__.py  pwncollege_cli.py
tests/: test_pwncollege_cli.py
