[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pwncollege_cli"
version = "0.0.1"
authors = [
    { name="Leonardo Taccari", email="iamleot@gmail.com" },
]
description = "CLI for pwn.college"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Utilities",
]
keywords = [
    "cli",
    "pwn",
    "pwn.college",
    "www",
]
dependencies = [
    "bs4",
    "requests"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]
test = [
    "responses",
]

# TODO
#[project.scripts]
#pwncollege-cli = "pwncollege_cli:main"

[project.urls]
Homepage = "https://github.com/iamleot/pwncollege_cli"
Repository = "https://github.com/iamleot/pwncollege_cli.git"
Issues = "https://github.com/iamleot/pwncollege_cli/issues"

[tool.black]
# honor PEP 8
line-length = 79
